--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -4,26 +4,50 @@
         <title>Ideia X</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     </head>
     <body>
-        <div class="page-header">
-          {% if user.is_authenticated %}
-            <a href="{% url 'idea_new' %}" class="top-menu" title="Adicionar ideia"><span class="glyphicon glyphicon-plus"></span></a>
-            <a href="{% url 'logout' %}" class="top-menu" title="Logout"><span class="glyphicon glyphicon-log-out"></span></a>
-            <p class="top-menu">Olá {{ user.username }}</p>
-          {% else %}
-            <a href="{% url 'login' %}" class="top-menu" title="Login"><span class="glyphicon glyphicon-lock"></span></a>
-          {% endif %}
-          <h1><a href="/">Ideia X</a></h1>
+      <div class="main-header">
+        <a href="/">
+          <h1 class="title">
+            ideaX
+          </h1>
+        </a>
+        {% if user.is_authenticated %}
+        <div class="menu">
+          <a class="icon" href="#">
+            <span><i class="fas fa-lightbulb"></i></span>
+            <p>Nova Ideia</p>
+          </a>
+          <a href="" class="icon">
+            <span><i class="fas fa-bookmark"></i></span>
+            <p>Nova Fase</p>
+          </a>
+          <a href="" class="icon">
+            <span><i class="fas fa-gavel"></i></span>
+            <p>Novo Critério</p>
+          </a>
         </div>
+        <div class="login">
+          <p>Olá, {{ user.username }}</p>
+          <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i></a>
+        </div>
+        {% else %}
+        <div class="login">
+          <a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i></a>
+        </div>
+
+        {% endif %}
+      </div>
+
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+
                 {% block content %}
                 {% endblock %}
-                </div>
+
             </div>
         </div>
       </body>
