correção de link de add ideia

--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -18,7 +18,7 @@
         </a>
         {% if user.is_authenticated %}
         <div class="menu">
-          <a class="icon" href="#">
+          <a class="icon  js-create-idea" href="javascript:void(0)" data-url="/idea/new/" class="top-menu js-create-idea">
             <span><i class="fas fa-lightbulb"></i></span>
             <p>Nova Ideia</p>
           </a>
