--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -165,3 +165,15 @@ form table{
   }
 
 }
+
+.like {
+  color: #0014f2;
+}
+
+.dislike {
+  color: #f20000;
+}
+
+.activeVote {
+  font-weight: bold;
+}
