--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -42,6 +42,15 @@
 
         {% endif %}
       </div>
+      <nav class="phase-filter">
+        <ul class="phase-list">
+          <li class="active"><a href="#">Todas</a></li>
+          <li><a href="#">Crescendo</a></li>
+          <li><a href="#">Avaliando</a></li>
+          <li><a href="#">Agindo</a></li>
+          <li><a href="#">Feitas</a></li>
+        </ul>
+      </nav>
 
         <div class="content container">
             <div class="row">
