--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -49,17 +49,19 @@
 
 
   {% if idea.id in ideas_created_by_me %}
-    <button type="button"
-        class="btn btn-sm js-update-idea"
-        data-url="{% url 'idea_edit' pk=idea.pk %}">
-      <span class="glyphicon glyphicon-pencil"></span> Edit
-    </button>
+    <div class="button-group">
+      <button type="button"
+          class="btn btn-sm js-update-idea"
+          data-url="{% url 'idea_edit' pk=idea.pk %}">
+        <span class="glyphicon glyphicon-pencil"></span> Edit
+      </button>
 
-    <button type="button"
-      class="btn btn-danger btn-sm js-remove-idea"
-      data-url="{% url 'idea_remove' pk=idea.pk %}">
-      <span class="glyphicon glyphicon-trash"></span> Delete
-    </button>
+      <button type="button"
+        class="btn btn-danger btn-sm js-remove-idea"
+        data-url="{% url 'idea_remove' pk=idea.pk %}">
+        <span class="glyphicon glyphicon-trash"></span> Delete
+      </button>
+    </div>
   {% endif%}
   </div>
 
