alteração da classe Idea

--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -19,7 +19,7 @@
     <p><span class="bold">Descrição: </span>{{ idea.description|linebreaksbr }}</p>
   </div>
   <div class="idea-footer">
-    <p class="phase">{{ idea.phase.name }}</p>
+    <p class="phase">{{ idea.get_phase_display }}</p>
 
 
 
