--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -60,6 +60,7 @@
 
             </div>
         </div>
+        <footer><div class="logo"><p>DATAPREV </p><p class="alpha-version">Software em versão Alpha</p></div></footer>
         <script
 			  src="http://code.jquery.com/jquery-3.3.1.min.js"
 			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
