barra secundária movida para idea-list, modificações de estilo dos cards

--- a/ideax/templates/ideax/idea_list.html
+++ b/ideax/templates/ideax/idea_list.html
@@ -1,6 +1,15 @@
 {% extends 'ideax/base.html' %}
 
 {% block content %}
+    <nav class="phase-filter">
+      <ul class="phase-list">
+        <li class="active"><a href="#">Todas</a></li>
+        <li><a href="#">Crescendo</a></li>
+        <li><a href="#">Avaliando</a></li>
+        <li><a href="#">Agindo</a></li>
+        <li><a href="#">Feitas</a></li>
+      </ul>
+    </nav>
     <div id="idea-list">
       {% include 'ideax/idea_list_loop.html' %}
     </div>
