--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -1,7 +1,3 @@
-body{
-  font-family: 'Open Sans', sans-serif;
-}
-
 .main-header{
   background-color: #46586A;
   border: #132537 solid 1px;
@@ -53,7 +49,6 @@ nav.phase-filter {
 }
 
 ul.phase-list {
-  overflow: auto;
   list-style-type: none;
 }
 
@@ -106,7 +101,7 @@ div.login{
 
 .menu{
   display: flex;
-  width: 30%;
+  width: 40%;
   justify-content: space-between;
 }
 
@@ -118,6 +113,12 @@ div.login{
   margin: 0px 30px;
   display: block;
 
+}
+
+.unavailable span,
+.unavailable p{
+  color: #a3a3a3;
+  cursor: default;
 }
 
 .icon p{
@@ -135,7 +136,7 @@ div.icon:hover{
 .icon span{
   display: block;
   font-size: 2em;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 
 .login-box{
@@ -290,6 +291,12 @@ div.idea{
 
 }
 
+.like-menu a{
+  text-decoration: none;
+  outline: 0;
+}
+
+
 
 .liked,
 .liked a{
@@ -299,7 +306,7 @@ div.idea{
 .disliked,
 .disliked a{
   margin-left: 10px;
-  color: #FF0400;
+  color: #FF040099;
 }
 
 footer{
@@ -309,25 +316,11 @@ footer{
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-
-}
-
-footer{
-  text-align: center;
 }
 
 footer p{
   margin: 0;
 }
-
-.alpha-version{
-  display: block;
-  float: right;
-}
-
 
 
 
