--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -22,11 +22,15 @@
             <span><i class="fas fa-lightbulb"></i></span>
             <p>Nova Ideia</p>
           </a>
-          <a href="" class="icon">
-            <span><i class="fas fa-bookmark"></i></span>
-            <p>Nova Fase</p>
+          <a href="" class="icon unavailable">
+            <span><i class="fas fa-tag"></i></span>
+            <p>Nova Categoria</p>
           </a>
-          <a href="" class="icon">
+          <a href="" class="icon unavailable">
+            <span><i class="fas fa-bullseye"></i></span>
+            <p>Nova Missão</p>
+          </a>
+          <a href="" class="icon unavailable">
             <span><i class="fas fa-gavel"></i></span>
             <p>Novo Critério</p>
           </a>
@@ -42,15 +46,7 @@
 
         {% endif %}
       </div>
-      <nav class="phase-filter">
-        <ul class="phase-list">
-          <li class="active"><a href="#">Todas</a></li>
-          <li><a href="#">Crescendo</a></li>
-          <li><a href="#">Avaliando</a></li>
-          <li><a href="#">Agindo</a></li>
-          <li><a href="#">Feitas</a></li>
-        </ul>
-      </nav>
+
 
         <div class="content container">
             <div class="row">
@@ -60,7 +56,7 @@
 
             </div>
         </div>
-        <footer><div class="logo"><p>DATAPREV </p><p class="alpha-version">Software em versão Alpha</p></div></footer>
+        <footer><div class="logo"><p class="alpha-version">Software em versão Alpha</p></div></footer>
         <script
 			  src="http://code.jquery.com/jquery-3.3.1.min.js"
 			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
