--- a/ideax/templates/ideax/includes/partial_idea_create.html
+++ b/ideax/templates/ideax/includes/partial_idea_create.html
@@ -7,6 +7,9 @@
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
+
+    <i class="far fa-lightbulb"></i>
+
     <h4 class="modal-title">Criar Ideia</h4>
   </div>
 
@@ -15,7 +18,7 @@
     {% include 'ideax/includes/partial_idea_form.html' %}
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+    <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button> -->
     <button type="submit" class="btn btn-primary">Salvar</button>
   </div>
 </form>
