--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -352,7 +352,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   width: 100%;
   bottom: 0;
 }
@@ -365,10 +365,15 @@ footer p {
   margin-top: 200px;
 }
 
-.modal-content {
+#modal-idea-crud .modal-content {
   border-left: 5px solid #36aed3;
   font-family: 'Open Sans', sans-serif;
   padding: 0 10px 0 5px;
+}
+
+#modal-idea .idea {
+  margin-left: 17px;
+  margin-top: 25px;
 }
 
 .modal-header h4 {
