--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -1,3 +1,17 @@
+html {
+      height: 100%;
+    }
+
+    body {
+      min-height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .content {
+      flex: 1;
+    }
+
 .main-header{
   background-color: #46586A;
   border: #132537 solid 1px;
@@ -108,6 +122,7 @@ div.login{
 
 .content{
   margin-bottom: 25px;
+  min-height: 100%;
 }
 
 
@@ -147,7 +162,7 @@ div.icon:hover{
 .login-box{
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  margin: 0 auto;
+  margin: 50px auto;
   background: #fafafa;
   max-width: 400px;
   min-height: 300px;
@@ -393,6 +408,7 @@ footer p {
 .modal-body textarea {
   min-width: 540px;
   width: 100%;
+  resize: none;
 }
 
 
