--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -19,7 +19,13 @@
     <p><span class="bold">Descrição: </span>{{ idea.description|linebreaksbr }}</p>
   </div>
   <div class="idea-footer">
-    <p class="phase">{{ idea.get_phase_display }}</p>
+
+    <div class="phase">
+        <div class="phase-symbol {{ idea.get_phase_display|lower }}-phase">
+          <i class="fas fa-comments"></i>
+        </div>
+        <p class="phase-name">{{ idea.get_phase_display }}</p>
+    </div>
 
 
 
