--- a/ideax/templates/ideax/index.html
+++ b/ideax/templates/ideax/index.html
@@ -41,4 +41,7 @@
         </div>
       </div>
     </div>
+    <div class="why-info">
+      <img src="{% static 'images/idea_why.png' %}" alt="">
+    </div>
 {% endblock %}
