--- a/ideax/templates/registration/login.html
+++ b/ideax/templates/registration/login.html
@@ -1,4 +1,6 @@
 {% extends "ideax/base.html" %}
+{% load widget_tweaks %}
+{% load staticfiles %}
 
 {% block content %}
     {% if form.errors %}
@@ -6,24 +8,20 @@
     {% endif %}
 
     <div class="login-box">
-      <h1>Log in</h1>
-      <p>É necessário fazer o login para ter acesso às ideias.</p>
+      <img class="login-icon" src="{% static 'images/idea_launch.png' %}" alt="">
+      <p class="login-info">É necessário fazer o login para ter acesso às ideias.</p>
       <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
-
-
           <table>
           <tr>
-              <td>{{ form.username.label_tag }}</td>
-              <td>{{ form.username }}</td>
+              <td>{{ form.username|attr:'class:login-field'|attr:'placeholder:nome.sobrenome' }}</td>
           </tr>
           <tr>
-              <td>{{ form.password.label_tag }}</td>
-              <td>{{ form.password }}</td>
+              <td>{{ form.password|attr:'class:login-field'|attr:'placeholder:senha' }}</td>
           </tr>
           </table>
 
-          <input type="submit" value="login" />
+          <input type="submit" value="login" class="login-button" />
           <input type="hidden" name="next" value="{{ next }}" />
       </form>
     </div>
