--- a/ideax/templates/ideax/idea_list.html
+++ b/ideax/templates/ideax/idea_list.html
@@ -8,6 +8,7 @@
         <li><a href="#">Avaliando</a></li>
         <li><a href="#">Agindo</a></li>
         <li><a href="#">Feitas</a></li>
+        <li><a href="#">Arquivadas</a></li>
       </ul>
     </nav>
     <div id="idea-list">
