--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -16,7 +16,7 @@ html {
 /*Cabecalho principal*/
 
 .main-header{
-  background-color: #46586A;
+  background-color: #333;
   border: #132537 solid 1px;
   color: #E6E6E6;
   font-family: 'Open Sans', sans-serif;
@@ -522,6 +522,7 @@ padding: 8% 15% 0 15%;
   align-items: center;
   padding: 30px 0;
   font-family: sans-serif;
+
 }
 
 .idea-launch .launch-text{
@@ -536,6 +537,7 @@ padding: 8% 15% 0 15%;
 .launch-text p{
   color: #666666;
   font-size: 1.1em;
+  text-align: justify
 }
 
 .idea-launch *{
@@ -554,10 +556,11 @@ padding: 8% 15% 0 15%;
   display: flex;
   justify-content: flex-end;;
   align-items: center;
+  /*! background-position-x: 15%; */
 }
 
 .function-list{
-  max-width: 1000px;
+  max-width: 60%;
   padding-right: 100px;
   min-height: 500px;
   display: flex;
@@ -580,16 +583,38 @@ padding: 8% 15% 0 15%;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 550px;
+  padding: 5% 1%;
 }
+
+
 
 footer.landing-page{
   min-height: 60px;
-  background: #2D3F51;
+  background: #333;
   color: #E6E6E6;
 }
 
+@media (max-width: 320px){
+      .functionality{
+    background-position-x: 50%;
+  }
+  .function-list{
+    max-width: 90%;
+  }
+   .brief-explanation{
+    padding: 8% 5% 0 5%;
+    min-height: 350px;
+  }
 
+  .brief-explanation h1{
+    font-size: 2.5em;
+    margin-bottom: 20px;
+  }
+  .brief-explanation p{
+    font-size: 1.1em;
+    text-align: justify
+  }
+}
 
 @media (min-width: 321px) and (max-width: 480px) {
   .main-header {
@@ -604,6 +629,42 @@ footer.landing-page{
     flex-basis: 100%;
     order: 1;
     margin-top: 20px;
+  }
+      .functionality{
+    background-position-x: 50%;
+  }
+  .function-list{
+    max-width: 90%;
+  }
+
+    .brief-explanation{
+    padding: 8% 5% 0 5%;
+    min-height: 350px;
+  }
+
+  .brief-explanation h1{
+    font-size: 2.5em;
+    margin-bottom: 20px;
+  }
+  .brief-explanation p{
+    font-size: 1.1em;
+    text-align: justify
+  }
+}
+
+@media (max-width: 550px){
+  .idea-launch{
+    flex-flow: column-reverse;
+
+  }
+
+  .idea-launch *{
+    margin: 10px 20px;
+  }
+
+  .idea-launch  img{
+    height: auto;
+    width: 30%;
   }
 }
 
@@ -621,6 +682,30 @@ footer.landing-page{
     order: 1;
     margin-top: 0px;
   }
+    .functionality{
+    background-position-x: 50%;
+  }
+  .function-list{
+    max-width: 70%;
+  }
+
+  .brief-explanation{
+    padding: 3% 5% 0 5%;
+    min-height: 350px;
+  }
+
+  .brief-explanation h1{
+    font-size: 3em;
+    margin-bottom: 20px;
+  }
+  .brief-explanation p{
+    font-size: 1.4em;
+    text-align: justify
+  }
+
+
+
+
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -635,6 +720,26 @@ footer.landing-page{
   }
   .menu {
     width: 65%;
+  }
+  .functionality{
+    background-position-x: 15%;
+  }
+  .function-list{
+    max-width: 50%;
+  }
+
+  .brief-explanation{
+    padding: 3% 10% 0 10%;
+    min-height: 350px;
+  }
+
+  .brief-explanation h1{
+    font-size: 3.5em;
+    margin-bottom: 20px;
+  }
+  .brief-explanation p{
+    font-size: 1.8em;
+    text-align: justify;
   }
 }
 
