--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -58,11 +58,11 @@
         </div>
         <footer {% if not user.is_authenticated %}class="landing-page"{% endif %} ><div class="logo"><p class="alpha-version">Idea X - Software in alpha stage</p></div></footer>
         <script
-			  src="http://code.jquery.com/jquery-3.3.1.min.js"
+			  src="//code.jquery.com/jquery-3.3.1.min.js"
 			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 			  crossorigin="anonymous"></script>
 
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
         </script>
 
         <script src="{% static '/js/idea.js' %}"></script>
