--- a/ideax/templates/ideax/includes/partial_idea_create.html
+++ b/ideax/templates/ideax/includes/partial_idea_create.html
@@ -4,13 +4,16 @@
   {% csrf_token %}
 
   <div class="modal-header">
+    <div class="modal-title">
+      <span><i class="far fa-lightbulb"></i></span>
+
+      <h4>Criar Ideia</h4>
+    </div>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
 
-    <i class="far fa-lightbulb"></i>
 
-    <h4 class="modal-title">Criar Ideia</h4>
   </div>
 
 
