--- a/ideax/templates/ideax/includes/partial_idea_update.html
+++ b/ideax/templates/ideax/includes/partial_idea_update.html
@@ -4,10 +4,13 @@
   {% csrf_token %}
 
   <div class="modal-header">
+    <div class="modal-title">
+      <h4 class="modal-title">Atualizar Ideia</h4>
+    </div>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Atualizar Ideia</h4>
+
   </div>
 
 
