--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -14,6 +14,35 @@
     <p>
       {{ idea.creation_date|date:"d/m/Y" }}
     </p>
+    <div class="idea-options">
+
+      <input class="menu-input" type="checkbox" id="menu{{idea.pk}}">
+      <label for="menu{{idea.pk}}">
+      <i class="fas fa-ellipsis-h"></i>
+      </label>
+
+            <div class="options-content">
+              <ul>
+                <li><a href="">Crescendo</a></li>
+                <li><a href="">Avaliando</a></li>
+                <li><a href="">Agindo</a></li>
+                <li><a href="">Feita</a></li>
+                <li><a href="">Arquivada</a></li>
+                <li class="actions">
+                  <div class="action edit">
+                    <button class="js-update-idea" data-url="{% url 'idea_edit' pk=idea.pk %}"><i class="far fa-edit"></i></button>
+                  </div>
+                  <div class="action delete">
+                    <button class="js-remove-idea" data-url="{% url 'idea_remove' pk=idea.pk %}"><i class="far fa-trash-alt"></i></button>
+                  </div>
+
+
+                </li>
+
+
+              </ul>
+            </div>
+          </div>
   </div>
   <div class="idea-desc">
     <p><span class="bold">Descrição: </span>{{ idea.description|linebreaksbr }}</p>
@@ -50,7 +79,7 @@
 
 
 
-    {% if idea.id in ideas_created_by_me %}
+    <!-- {% if idea.id in ideas_created_by_me %}
     <div class="button-group">
       <button type="button" class="btn btn-sm js-update-idea" data-url="{% url 'idea_edit' pk=idea.pk %}">
         <span class="glyphicon glyphicon-pencil"></span> Edit
@@ -60,7 +89,7 @@
         <span class="glyphicon glyphicon-trash"></span> Delete
       </button>
     </div>
-    {% endif%}
+    {% endif%} -->
   </div>
 
 </div>
